--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,44 @@
 .container {
   padding: 0 2rem;
+  max-width: 1472px;
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+}
+
+.lang {
+  align-self: flex-end;
+  margin-top: 2rem;
+  margin-bottom: 6rem;
+}
+
+.lozung {
+  margin: 0 2rem;
+}
+
+.string {
+  display: flex;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  overflow: hidden;
+  background-color: #c4c4c4;
+  font-size: 20px;
+  padding: 0.25rem;
+  width: 100vw;
+  position: absolute;
+  top: 80px;
+  left: 0;
+}
+
+.banner {
+  background-image: url(../assets/img/sky.png);
+  background-position: center center;
+  background-size: cover;
+  min-height: 500px;
 }
 
 .main {
@@ -12,100 +51,76 @@
   align-items: center;
 }
 
+.ol {
+  margin: 4rem 2rem;
+  padding: 2rem 4rem;
+  border-top: 1px solid rgba(0,0,0,0.8);
+  border-bottom: 1px solid rgba(0,0,0,0.8);
+}
+
+.li {
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+}
+
+.num {
+  font-size: 48px;
+  margin: 0 2rem;
+}
+
+.li:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
 .footer {
   display: flex;
+  position: relative;
   flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  padding: 8rem 0;
   justify-content: center;
   align-items: center;
+
+  background-image: url(../assets/img/people.png);
+  background-position: center center;
+  background-size: cover;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.footer:before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 75px;
+  height: 68px;
+  top: -34px;
+  left: 26px;
+  background-color: #830000;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.white {
+  color: #fff;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.yellow {
+  color: #FBFF40;
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+.red {
+  color: #830000;
 }
 
-.title,
-.description {
+.center {
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
+.nomargin {
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (max-width: 600px) {
