--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,20 @@
+@font-face {
+  font-family: 'Gill Sans';
+  src: url(../assets/fonts/GillSansC.ttf);
+}
+
+@font-face {
+  font-family: 'Gill Sans';
+  src: url(../assets/fonts/GillSansC-Bold.ttf);
+  font-weight: bold;
+}
+
 html,
 body {
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 a {
@@ -13,4 +24,38 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+  font-size: 72px;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+p {
+  font-size: 24px;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+input {
+  border-radius: 1rem;
+  border-width: 0;
+  padding: 0.25rem;
+  background-color: #fff;
+  font-family: 'Gill Sans';
+  font-size: 20px;
+  margin: 0.5rem;
+}
+
+button {
+  border-radius: 1rem;
+  border-width: 0;
+  padding: 0.25rem;
+  background-color: #eee;
+  font-family: 'Gill Sans';
+  font-size: 20px;
+  margin: 2rem;
 }
